--- a/app/app/src/main/res/layout/profil_classe.xml
+++ b/app/app/src/main/res/layout/profil_classe.xml
@@ -15,7 +15,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/apercu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0"
