--- a/app/app/src/main/res/layout/profil_eleve.xml
+++ b/app/app/src/main/res/layout/profil_eleve.xml
@@ -36,6 +36,7 @@
             android:layout_weight="1"
             android:text="ELEVE BOF" />
         <ImageView
+            android:id="@+id/couleur"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
